# encrypted-vault

./: .gitignore  Cargo.toml  README.md  certificate-generation.sh  cyptography_primitives.md  implementation.md
src/: client.rs  client_unsealing.rs  config.rs  data.rs  error.rs  lib.rs  local_server.rs  main.rs  serde_json_disk.rs  server.rs  server_connection.rs  symmetric_encryption_helper.rs  utils.rs  validation.rs
src/client/: client_config.rs  controller.rs  encryptor_decryptor.rs  http_connection.rs  key_pair.rs  mod.rs  organization_creation.rs  session_controller.rs
src/server/: http_server.rs  local_server.rs  mod.rs  serde_json_disk.rs  server_config.rs  session_manager.rs
src/tests/: client_sever_mock_communication.rs  mod.rs  utils.rs
tests/: client_server.rs
