[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dryoc = {version = "0.4.2", features = ["serde"]}
sharks = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
rand = "0.8.5"
base64 = "0.20.0"
data-encoding = "2.3.3"