[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dryoc = {version = "0.4.2", features = ["serde"]}
sharks = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
rand = "0.8.5"
data-encoding = "2.3.3"
axum = "0.6.1"
axum-server = { version = "0.4.4", features = ["tls-rustls"]}
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
tokio = {version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
zxcvbn = "2.2.1"
uuid = { version = "1.2.2", features = ["v4"] }
confy = "0.5.1"
read_input = "0.8.6"
rpassword = "7.2.0"
dialoguer = "0.3.0"